# otus_cpp_lesson_01_01

./: .travis.yml  CMakeLists.txt  main.cpp
helloworld_cli/: CMakeLists.txt
helloworld_cli/src/: main.cpp
helloworld_lib/: CMakeLists.txt
helloworld_lib/src/: helloworld.cpp
helloworld_lib/test/: CMakeLists.txt  main.cpp
